--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
             background-color: black;
         }
     </style>
+    
 </head>
 <body>
+    <script src="main.js"></script>
     
 </body>
 </html>
