--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-color: black;
-        }
-    </style>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <script src="main.js"></script>
-    
+
+    <h2>Pick one!</h2>
+    <div class="buttons">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissor">Scissor</button>
+    </div>
 </body>
 </html>
