--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rpc</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<script src="main.js" defer></script>
 </head>
 <body>
-    <script src="main.js"></script>
 
     <h2>Pick one!</h2>
     <div class="buttons">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissor">Scissor</button>
+        <button class="rock">✊</button>
+        <button class="paper">✋</button>
+        <button class="scissor">✌️</button>
     </div>
+    <h3></h3>
+    <h4></h4>
 </body>
 </html>
